Fix typo in blog/base.html

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
             <p>You are not logged in.</p>
             <a href="{% url 'login' %}">Log In</a> |
             <a href="{% url 'signup' %}">Sign Up</a> |
-            <a href="{% url 'password_reset' %}">Forfot password?</a>
+            <a href="{% url 'password_reset' %}">Forgot password?</a>
         {% endif %}
 
         <div class="category-menu">
