--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -26,8 +26,10 @@
         {% endif %}
 
         <div class="container">
-            {% block content %}
-            {% endblock content %}
+            <div style="width:350px; margin: 0 auto;">
+                {% block content %}
+                {% endblock content %}
+            </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
