--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -1,30 +1,41 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Board detail{% endblock title %}
 
 {% block content %}
-    <input type="email" name="invite_email" placeholder="Enter email to invite" onkeypress="inviteUser(event, {{board.pk}})" />
     <div class="lists">
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Add list" />
-        </form>
+        <div class="form-group form-inline">            
+            <input type="email" class="form-control mr-2" name="invite_email" placeholder="Enter email to invite" onkeypress="inviteUser(event, {{board.pk}})" />
+            <button class="btn btn-primary form-control">Invite</button>
+        </div>
+        
         <ul class="list_list">
+            <li class="list card bg-info text-white m-1 align-self-start">
+                <form class="card-body text-center" method="post">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="btn btn-success border border-white" type="submit" value="Add list" />
+                </form>
+            </li>
             {% for list in board.list_set.all %}
-                <li class="list">
-                    {{list.title}}
-                    <span onclick="deleteList({{list.pk}})">X</span>
-
-                    <ul class="card_list">
+                <li class="list card bg-info text-white m-1 align-self-start">
+                    
+                    <div class="card-header d-flex align-items-center justify-content-between">
+                        {{list.title}}
+                        <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
+                    </div>
+                    <ul class="card_list card-body text-dark">
                         {% for card in list.card_set.all %}
-                            <li class="card">
-                                {{card.title}}
-                                <span onclick="deleteCard({{list.pk}}, {{card.pk}})">X</span>
+                            <li class="card mb-2">
+                                <div class="card-body d-flex align-items-center justify-content-between">
+                                    {{card.title}}
+                                    <button class="btn btn-link text-danger p-0" onclick="deleteCard({{list.pk}}, {{card.pk}})">X</button>
+                                </div>
                             </li>
                         {% endfor %}
-                        <li class="card">
-                            <input type="text" placeholder="Add card" onkeypress="addCard(event, {{list.pk}})" />
+                        <li class="card form-group mb-0">
+                            <input type="text" class="form-control" placeholder="Add card" onkeypress="addCard(event, {{list.pk}})" />
                         </li>
                     </ul>
 
