--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <a href="{% url 'account_signup' %}">Sign Up</a>
         {% endif %}
 
-        <div class="container">
+        <div class="container-fluid">
             {% block content %}
             {% endblock content %}
         </div>
