--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -4,10 +4,36 @@
 {% block title %}Board detail{% endblock title %}
 
 {% block content %}
+    <!-- Modal -->
+        <div class="modal fade" id="card-modal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                        <div class="form-group">
+                            <textarea class="form-control new-comment" placeholder="Write a comment..."></textarea>
+                        </div>
+                        <button class="btn btn-success save-btn mb-3" onclick="saveComment()">Save</button>
+                        <div>
+                            <p class="lead mb-2">Comments</p>
+                            <ul class="card-comments list-group"></ul>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     <div class="lists">
         <div class="form-group form-inline">            
-            <input type="email" class="form-control mr-2" name="invite_email" placeholder="Enter email to invite" onkeypress="inviteUser(event, {{board.pk}})" />
-            <button class="btn btn-primary form-control">Invite</button>
+            <input type="email" class="form-control mr-2" name="invite_email" placeholder="Enter email to invite" />
+            <button class="btn btn-primary form-control" onclick="inviteUser({{board.pk}})">Invite</button>
         </div>
         
         <ul class="list_list">
@@ -22,15 +48,15 @@
                 <li class="list card bg-info text-white m-1 align-self-start">
                     
                     <div class="card-header d-flex align-items-center justify-content-between">
-                        {{list.title}}
+                        {{list.title|title}}
                         <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
                     </div>
                     <ul class="card_list card-body text-dark">
                         {% for card in list.card_set.all %}
-                            <li class="card mb-2">
+                            <li class="card mb-2" onclick="showCardModal({{list.pk}}, {{card.pk}}, '{{card.title|title}}')">
                                 <div class="card-body d-flex align-items-center justify-content-between">
-                                    {{card.title}}
-                                    <button class="btn btn-link text-danger p-0" onclick="deleteCard({{list.pk}}, {{card.pk}})">X</button>
+                                    {{card.title|title}}
+                                    <button class="btn btn-link text-danger p-0" onclick="deleteCard(event, {{list.pk}}, {{card.pk}})">X</button>
                                 </div>
                             </li>
                         {% endfor %}
@@ -47,6 +73,72 @@
 
 {% block app_script %}
     <script>
+        $('#card-modal').modal({
+            backdrop: 'static',
+            keyboard: false,
+            show: false,
+        });
+
+        $('#card-modal').on('hidden.bs.modal', function () {
+            clearCommentTxtArea()
+        })
+
+        function clearCommentTxtArea() {
+            const comment = $('#card-modal .new-comment')
+            comment.val('')  
+        }
+
+        function saveComment(cardPK, listPK) {
+            const comment = $('#card-modal .new-comment')
+            $.ajax({
+                type: 'PUT',
+                url: 'lists/' + listPK + '/cards/',
+                data: { pk: cardPK, comment: comment.val() },  
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {  
+                    clearCommentTxtArea()
+                    fetchCard(listPK, cardPK)
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });    
+        }
+
+        function showCardModal(listPK, cardPK, title) {
+            $("#card-modal .modal-header").html(title)
+            $("#card-modal .save-btn").attr("onclick", `saveComment(${cardPK}, ${listPK})`);
+
+            fetchCard(listPK, cardPK)
+        }
+
+        function fetchCard(listPK, cardPK) {
+            $.ajax({
+                type: 'GET',
+                url: 'lists/' + listPK + '/cards/',
+                data: { pk: cardPK },  
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {  
+                    // window.location.href = data.redirect
+                    //$("#card-modal .card-comments").html(comments)
+                    const comments = data.card_comments
+                    $('#card-modal .card-comments').html('')
+                    comments.forEach(c => {
+                        console.log(c)
+                        $('#card-modal .card-comments').append(
+                            `<li class="list-group-item">
+                                <strong>${c.frm_email}:</strong> ${c.comment}</li>`)
+                    })
+
+                    console.log(data)
+                    $('#card-modal').modal('show');
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });
+        }
+
         function inviteUser(e) {
             var email = e.target.value
             if (e.keyCode === 13) {
@@ -80,7 +172,8 @@
             });
         }
 
-        function deleteCard(listPK, cardPK) {
+        function deleteCard(e, listPK, cardPK) {
+            e.stopPropagation()
             $.ajax({
                 type: 'DELETE',
                 url: 'lists/' + listPK + '/cards/',
