--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -58,7 +58,7 @@
                     <li class="list card bg-info text-white m-1 align-self-start" data-id="{{list.pk}}">
                         
                         <div class="card-header d-flex align-items-center justify-content-between">
-                            {{list.title|title}}
+                            <span onclick="editListTitle(event, '{{list.title}}', {{list.pk}})">{{list.title|title}}</span>
                             <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
                         </div>
                         <div class="card-body">
@@ -180,6 +180,43 @@
         });
 
         fetchActivityLog()
+
+        function editListTitle(e, title, pk) {
+            const titleWrapper = $(e.target)
+
+            const setTitleCB = () => {
+                const newVal = inp.val().trim()
+                const titleCase = (str) => {
+                    return str.toLowerCase().split(' ').map(function(word) {
+                        return (word.charAt(0).toUpperCase() + word.slice(1));
+                    }).join(' ');
+                }
+                titleWrapper.html(titleCase(newVal))
+                setListTitle(titleCase(newVal), pk)
+            }
+
+            const inp = $(`<input value="${title}" >`)
+                .focusout(setTitleCB)
+                .keypress(e => e.which === 13 ? setTitleCB() : null)
+
+            titleWrapper.html(inp)
+            inp.focus().select()
+        }
+
+        function setListTitle(title, pk) {
+            $.ajax({
+                type: 'PUT',
+                url: `lists/${pk}/`,
+                data: { title },  
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {  
+                    console.log(data)
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });  
+        }
 
         function saveComment(cardPK, listPK) {
             $.ajax({
