--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -58,7 +58,7 @@
                     <li class="list card bg-info text-white m-1 align-self-start" data-id="{{list.pk}}">
                         
                         <div class="card-header d-flex align-items-center justify-content-between">
-                            <span onclick="editListTitle(event, '{{list.title}}', {{list.pk}})">{{list.title|title}}</span>
+                            <span onclick="editTitle(event, '{{list.title}}', {{list.pk}}, setListTitle)">{{list.title|title}}</span>
                             <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
                         </div>
                         <div class="card-body">
@@ -66,7 +66,7 @@
                                 {% for card in list.card_set.all %}
                                     <li class="card mb-2" onclick="showCardModal({{list.pk}}, {{card.pk}}, '{{card.title|title}}')" data-id="{{card.pk}}">
                                         <div class="card-body d-flex align-items-center justify-content-between">
-                                            {{card.pk|title}}
+                                            <span class="card-title mb-0" data-id="{{card.pk}}">{{card.title|title}}</span>
                                             <button class="btn btn-link text-danger p-0" onclick="deleteCard(event, {{list.pk}}, {{card.pk}})">X</button>
                                         </div>
                                     </li>
@@ -181,8 +181,14 @@
 
         fetchActivityLog()
 
-        function editListTitle(e, title, pk) {
+        function editTitle(e, title, pk, cb, ...args) {
+            e.stopPropagation()
+            e.preventDefault()
             const titleWrapper = $(e.target)
+
+            if (!!titleWrapper.find('input')[0]) {
+                return
+            }
 
             const setTitleCB = () => {
                 const newVal = inp.val().trim()
@@ -192,7 +198,7 @@
                     }).join(' ');
                 }
                 titleWrapper.html(titleCase(newVal))
-                setListTitle(titleCase(newVal), pk)
+                cb(titleCase(newVal), pk, ...args)
             }
 
             const inp = $(`<input value="${title}" >`)
@@ -203,10 +209,30 @@
             inp.focus().select()
         }
 
+        function setCardTitle(title, pk, ...args) {
+            const listPK = args[0]
+            $.ajax({
+                type: 'PUT',
+                url: `lists/${listPK}/cards/${pk}/set-title/`,
+                data: { title },  
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {  
+                    $('.card_list .card-title')
+                        .find(`[data-id='${pk}']`)
+                        .html(title)
+
+                    $(`span.card-title[data-id='${pk}']`)[0].innerHTML = title
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });  
+        }
+
         function setListTitle(title, pk) {
             $.ajax({
                 type: 'PUT',
-                url: `lists/${pk}/`,
+                url: `lists/${pk}/set-title/`,
                 data: { title },  
                 contentType: 'application/json',
                 success: function (data, textStatus, xhr) {  
@@ -253,7 +279,9 @@
         }
 
         function showCardModal(listPK, cardPK, title) {
-            $("#card-modal .modal-header").html(title)
+            console.log(listPK)
+            $("#card-modal .modal-header")
+                .html(`<span onclick="editTitle(event, '${title}', ${cardPK}, setCardTitle, ${listPK})">${title}</span>`)
             $("#card-modal .save-btn").attr("onclick", `saveComment(${cardPK}, ${listPK})`);
 
             fetchCard(listPK, cardPK)
