--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -6,6 +6,7 @@
 {% block content %}
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <p class="text-center"><button class="btn btn-link text-danger" onclick="leaveBoard({{board.pk}})">Leave Board</button></p>
         <p class="lead text-center text-nowrap">Activity log</p>
         <ul class="activity-log list-group list-group-flush"></ul>
     </div>
@@ -55,27 +56,30 @@
             </li>
             <div class="list_set d-flex">
                 {% for list in board.list_set.all %}
-                    <li class="list card bg-info text-white m-1 align-self-start" data-id="{{list.pk}}">
-                        
-                        <div class="card-header d-flex align-items-center justify-content-between">
-                            <span onclick="editTitle(event, '{{list.title}}', {{list.pk}}, setListTitle)">{{list.title|title}}</span>
-                            <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
-                        </div>
-                        <div class="card-body">
-                            <ul class="card_list text-dark pl-0" data-id="{{list.pk}}">
-                                {% for card in list.card_set.all %}
-                                    <li class="card mb-2" onclick="showCardModal({{list.pk}}, {{card.pk}}, '{{card.title|title}}')" data-id="{{card.pk}}">
-                                        <div class="card-body d-flex align-items-center justify-content-between">
-                                            <span class="card-title mb-0" data-id="{{card.pk}}">{{card.title|title}}</span>
-                                            <button class="btn btn-link text-danger p-0" onclick="deleteCard(event, {{list.pk}}, {{card.pk}})">X</button>
-                                        </div>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                            <input type="text" class="form-control" placeholder="Add card" onkeypress="addCard(event, {{list.pk}})" />
-                        </div>
+                    {% if not list.is_archived %}
+                        <li class="list card bg-info text-white m-1 align-self-start" data-id="{{list.pk}}">
+                            <div class="card-header d-flex align-items-center justify-content-between">
+                                <span onclick="editTitle(event, '{{list.title}}', {{list.pk}}, setListTitle)">{{list.title|title}}</span>
+                                <button class="btn btn-danger btn-sm" onclick="deleteList({{list.pk}})">X</button>
+                            </div>
+                            <div class="card-body">
+                                <ul class="card_list text-dark pl-0" data-id="{{list.pk}}">
+                                    {% for card in list.card_set.all %}
+                                        {% if not card.is_archived %}
+                                            <li class="card mb-2" onclick="showCardModal({{list.pk}}, {{card.pk}}, '{{card.title|title}}')" data-id="{{card.pk}}">
+                                                <div class="card-body d-flex align-items-center justify-content-between">
+                                                    <span class="card-title mb-0" data-id="{{card.pk}}">{{card.title|title}}</span>
+                                                    <button class="btn btn-link text-danger p-0" onclick="deleteCard(event, {{list.pk}}, {{card.pk}})">X</button>
+                                                </div>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                                <input type="text" class="form-control" placeholder="Add card" onkeypress="addCard(event, {{list.pk}})" />
+                            </div>
 
-                    </li>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </div>
         </ul>
@@ -180,6 +184,20 @@
         });
 
         fetchActivityLog()
+
+        function leaveBoard() {
+            $.ajax({
+                type: 'POST',
+                url: 'leave-board/',
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {  
+                    window.location.href = data.redirect
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });  
+        }
 
         function editTitle(e, title, pk, cb, ...args) {
             e.stopPropagation()
